--- a/Extra_Assignment_2.ipynb
+++ b/Extra_Assignment_2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "913cc590",
+   "id": "275d3c9a",
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a88e0e18",
+   "id": "5c1b686f",
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "a83a1786",
+   "id": "ed162b1b",
    "metadata": {},
    "outputs": [
     {
@@ -79,8 +79,160 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "05e10fc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "r\n",
+      "t\n",
+      "i\n",
+      "f\n",
+      "i\n",
+      "c\n",
+      "i\n",
+      "a\n",
+      "l\n",
+      " \n",
+      "I\n",
+      "n\n",
+      "t\n",
+      "e\n",
+      "l\n",
+      "l\n",
+      "i\n",
+      "g\n",
+      "e\n",
+      "n\n",
+      "c\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "Name=\"Artificial Intelligence\"\n",
+    "for value in Name:\n",
+    "    print (value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "e34dce29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your Name - Murali\n",
+      "Your Age -49\n",
+      "Your Profession -IT\n"
+     ]
+    }
+   ],
+   "source": [
+    "Name=input(\"Your Name - \")\n",
+    "Age=int(input(\"Your Age -\"))\n",
+    "Prof=input(\"Your Profession -\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fcf6f07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 'Welcome', 2, 'Hope')\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tuple01 = (1, 'Welcome', 2, 'Hope')\n",
+    "print(Tuple01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "f661d37d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((1, 2, 3), ('python', 'HOPE'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "Tuple1 = (1,2,3)\n",
+    "Tuple2 = ('python', 'HOPE')\n",
+    "Tuple3 = (Tuple1 , Tuple2)\n",
+    "print(Tuple3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "cf15b847",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19 is Odd\n",
+      "25 is Odd\n",
+      "1 is Odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists=[20,10,16,19,25,1,276,188]\n",
+    "for num in lists:\n",
+    "    if(num%2==1):\n",
+    "        print(num, \"is Odd\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "bc77bc97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20 is Even\n",
+      "10 is Even\n",
+      "16 is Even\n",
+      "276 is Even\n",
+      "188 is Even\n"
+     ]
+    }
+   ],
+   "source": [
+    "lists=[20,10,16,19,25,1,276,188]\n",
+    "for num in lists:\n",
+    "    if(num%2==0):\n",
+    "        print(num, \"is Even\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "409dd835",
+   "id": "d9dd6bcc",
    "metadata": {},
    "outputs": [],
    "source": []
